--- a/index.html
+++ b/index.html
@@ -96,20 +96,24 @@
       <p>PhD student in Neuroeconomics, University of Zurich</p>
     </header>
 
-    <div class="grid">
-      <!-- LEFT: photo + quick links -->
-      <aside class="sidebar">
-        <img class="photo" src="imageSaurabh.jpg" alt="Portrait of Saurabh Bedi" />
-        <p class="role"><a href="mailto:saurabh.bedi@econ.uzh.ch">saurabh.bedi@econ.uzh.ch</a></p>
+<div class="grid">
+  <!-- LEFT: photo + quick links -->
+  <aside class="sidebar">
+    <img class="photo" src="imageSaurabh.jpg" alt="Portrait of Saurabh Bedi" />
 
-        <div class="links">
-          <a href="https://bsky.app/profile/saurabhbedi.bsky.social" target="_blank" rel="noopener">
-            <span>Bluesky</span> <span class="small">/ @saurabhbedi.bsky.social</span>
-          </a>
-          <a href="https://scholar.google.com/citations?user=PZrYFUMAAAAJ&hl=en" target="_blank" rel="noopener">
-            <span>Google Scholar</span> <span class="small">/ publications</span>
-          </a>
-        </div>
+    <div class="links">
+      <a href="mailto:saurabh.bedi@econ.uzh.ch">
+        <span>Email</span> <span class="small">/ saurabh.bedi@econ.uzh.ch</span>
+      </a>
+      <a href="https://bsky.app/profile/saurabhbedi.bsky.social" target="_blank" rel="noopener">
+        <span>Bluesky</span> <span class="small">/ @saurabhbedi.bsky.social</span>
+      </a>
+      <a href="https://scholar.google.com/citations?user=PZrYFUMAAAAJ&hl=en" target="_blank" rel="noopener">
+        <span>Google Scholar</span> <span class="small">/ publications</span>
+      </a>
+    </div>
+
+    <!-- Tag groups remain below here -->
 
         <!-- Tag groups -->
         <div class="tag-group">
